--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ classifiers = [
 ]
 license = {file = "LICENSE"}
 dependencies = [
-    "pytest>=8.3.4",
     "sphinx>=8.1.3",
     "sphinx-rtd-theme>=3.0.2",
 ]
@@ -24,3 +23,15 @@ dependencies = [
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.4",
+    "ruff>=0.9.6",
+    "setuptools>=75.8.0",
+]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
