--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,22 +16,21 @@ classifiers = [
 ]
 license = {file = "LICENSE"}
 dependencies = [
-    "sphinx>=8.1.3",
-    "sphinx-rtd-theme>=3.0.2",
+    "platformdirs>=4.3.6",
 ]
 
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=8.3.4",
     "ruff>=0.9.6",
     "setuptools>=75.8.0",
+    "sphinx>=8.1.3",
+    "sphinx-rtd-theme>=3.0.2",
 ]
 
-[[tool.uv.index]]
-name = "testpypi"
-url = "https://test.pypi.org/simple/"
-publish-url = "https://test.pypi.org/legacy/"
+
+
