--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
 license = {file = "LICENSE"}
 dependencies = [
     "platformdirs>=4.3.6",
+    "typer>=0.15.1",
 ]
 
 [build-system]
@@ -25,12 +26,25 @@ build-backend = "setuptools.build_meta"
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.1.0",
+    "pyright>=1.1.394",
     "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
     "ruff>=0.9.6",
     "setuptools>=75.8.0",
     "sphinx>=8.1.3",
     "sphinx-rtd-theme>=3.0.2",
 ]
 
+[tool.ruff]
+line-length = 100
+target-version = "py313"
+
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F403"]
+
+[tool.pyright]
+exclude = [".venv"]
+pythonVersion = "3.12"
+venvPath = "."
+venv = ".venv"
