--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v3
-      - run: uv build
+
+      - name: Build the project
+        run: uv build
+
       # Check that basic features work and we didn't miss to include crucial files
       - name: Smoke test (wheel)
-        run: uv run --isolated --no-project -p 3.13 --with dist/*.whl tests/smoke_test.py
+        run: uv run --isolated --no-project -p 3.12 --with dist/*.whl tests/smoke_test.py
       - name: Smoke test (source distribution)
-        run: uv run --isolated --no-project -p 3.13 --with dist/*.tar.gz tests/smoke_test.py
-      - run: uv publish --index testpypi --trusted-publishing always
+        run: uv run --isolated --no-project -p 3.12 --with dist/*.tar.gz tests/smoke_test.py
+
+      - name: Publish
+        run: uv publish --index testpypi --trusted-publishing always
