--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,8 @@ exclude = [".venv"]
 pythonVersion = "3.12"
 venvPath = "."
 venv = ".venv"
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
