--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,10 @@ dependencies = [
 ]
 
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+# requires = ["setuptools"]
+# build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
@@ -31,7 +33,7 @@ dev = [
     "pytest>=8.3.4",
     "pytest-cov>=6.0.0",
     "ruff>=0.9.6",
-    "setuptools>=75.8.0",
+    #"setuptools>=75.8.0",
     "sphinx>=8.1.3",
     "sphinx-rtd-theme>=3.0.2",
 ]
