--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "scaldys"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
   { name="scaldys", email="scaldyx@scaldys.net" },
 ]
@@ -51,7 +51,7 @@ pythonVersion = "3.12"
 venvPath = "."
 venv = ".venv"
 
-[[tool.uv.index]]
-name = "testpypi"
-url = "https://test.pypi.org/simple/"
-publish-url = "https://test.pypi.org/legacy/"
+#[[tool.uv.index]]
+#name = "testpypi"
+#url = "https://test.pypi.org/simple/"
+#publish-url = "https://test.pypi.org/legacy/"
