Test to publish on testpypi (6)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,9 @@ name: Release
 
 on:
   push:
-    tags:
-      # Publish on any tag starting with a `v`, e.g. v1.2.3
-      - v*
+#    tags:
+#      # Publish on any tag starting with a `v`, e.g. v1.2.3
+#      - v*
 
 jobs:
   pypi:
