--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ pythonVersion = "3.12"
 venvPath = "."
 venv = ".venv"
 
-#[[tool.uv.index]]
-#name = "testpypi"
-#url = "https://test.pypi.org/simple/"
-#publish-url = "https://test.pypi.org/legacy/"
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
