--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,8 @@ dependencies = [
 ]
 
 [build-system]
-# requires = ["setuptools"]
-# build-backend = "setuptools.build_meta"
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
 [dependency-groups]
 dev = [
