--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: Utilities",
 ]
+license = "MIT"
 #license = {file = "LICENSE"}
 dependencies = [
     "platformdirs>=4.3.6",
