--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dev = [
     "sphinx-rtd-theme>=3.0.2",
 ]
 
+[tool.setuptools]
+license-files = []
+
 [tool.ruff]
 line-length = 100
 target-version = "py312"
