--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "scaldys"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
-  { name="scaldys", email="scaldyx@scaldys.net" },
+  { name="scaldys", email="scaldys@scaldys.net" },
 ]
-description = "A template for Python projects managed by scaldys."
+description = "A skeleton for Python projects by Scaldys."
 readme = "README.rst"
 requires-python = ">=3.12"
 classifiers = [
@@ -52,7 +52,7 @@ pythonVersion = "3.12"
 venvPath = "."
 venv = ".venv"
 
-[[tool.uv.index]]
-name = "testpypi"
-url = "https://test.pypi.org/simple/"
-publish-url = "https://test.pypi.org/legacy/"
+#[[tool.uv.index]]
+#name = "testpypi"
+#url = "https://test.pypi.org/simple/"
+#publish-url = "https://test.pypi.org/legacy/"
